<resources>
    <string name="app_name">FoodTrackerApp</string>
    <string name="surveyIntro">Please fill out the following survey:</string>

    <string name="nameHint">Name</string>
    <string name="age">Age</string>

    <!--Submit button-->
    <string name="submit">Submit</string>

    <!--Question 1 options-->
    <string name="question1">Gender</string>
    <string name="q1option1">Male</string>
    <string name="q1option2">Female</string>
    <string name="q1option3">Prefer not to say</string>

    <!--Question 2 options-->
    <string name="question2">How often do you work out?</string>
    <string name="q2option1">1-2 times a week</string>
    <string name="q2option2">3-5 times a week</string>
    <string name="q2option3">6-7 times a week</string>
    <string name="q2option4">None</string>

    <!--profilescreen-->
    <string name="click_to_check_profile">Check Profile!</string>
    <string name="excercise_per_week">Excercise per Week:</string>
    <string name="name">Name :</string>
    <string name="ageHolder">Age :</string>

    <!--Meal choices options-->
    <string name="mealChoice1">Breakfast</string>
    <string name="mealChoice2">Lunch</string>
    <string name="mealChoice3">Dinner</string>

</resources>