<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FirstLaunchScreen">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/aliceBlue"
        android:padding="8dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/card"
        android:paddingTop="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/survey_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/surveyIntro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="315dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:padding = "5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioButton
            android:id="@+id/q1Option1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q1option1" />

        <RadioButton
            android:id="@+id/q1Option2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q1option2" />

        <RadioButton
            android:id="@+id/q1Option3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q1option3" />


    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="189dp"
        android:layout_height="52dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@color/background"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="315dp"
        android:layout_height="130dp"
        android:layout_marginTop="12dp"
        android:padding = "5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <RadioButton
            android:id="@+id/q2Option1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q2option1" />

        <RadioButton
            android:id="@+id/q2Option2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q2option2" />

        <RadioButton
            android:id="@+id/q2Option3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q2option3" />

        <RadioButton
            android:id="@+id/q2Option4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/q2option4" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/survey_intro"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
</androidx.constraintlayout.widget.ConstraintLayout>