<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeal">

    <TextView
        android:id="@+id/LogMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Log Meal"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mealName"
        android:layout_width="326dp"
        android:layout_height="64dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter food name:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogMeal" />

    <TextView
        android:id="@+id/selectMealTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Select Meal"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealName" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="295dp"
        android:layout_height="142dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMealTextView">

        <RadioButton
            android:id="@+id/breakfastRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mealChoice1" />

        <RadioButton
            android:id="@+id/lunchRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mealChoice2" />

        <RadioButton
            android:id="@+id/dinnerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mealChoice3" />
    </RadioGroup>

    <Button
        android:id="@+id/addMealBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Add Meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
</androidx.constraintlayout.widget.ConstraintLayout>