<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="274dp"
        android:layout_height="253dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="150dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164">


        <ImageView
            android:id="@+id/profileScreenImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profilescreenimage" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:text="@string/name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/userNameHolder"
        android:layout_width="196dp"
        android:layout_height="38dp"
        android:text="TextView"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginStart="68dp"
        android:text="@string/ageHolder"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/userAgeHolder"
        android:layout_width="196dp"
        android:layout_height="35dp"
        android:text="TextView"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/ageLabel"
        app:layout_constraintTop_toBottomOf="@+id/userNameHolder" />

    <TextView
        android:id="@+id/excersiceLabel"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginStart="68dp"
        android:text="@string/excercise_per_week"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel" />

    <TextView
        android:id="@+id/excerciseAmountHolder"
        android:layout_width="195dp"
        android:layout_height="68dp"
        android:text="TextView"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/excersiceLabel"
        app:layout_constraintTop_toBottomOf="@+id/userAgeHolder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/backbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>